--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@pinia/nuxt": "^0.5.5",
     "@primevue/themes": "^4.1.0",
     "@vueuse/core": "^11.1.0",
     "@vueuse/nuxt": "^11.1.0",
+    "http-proxy-middleware": "^3.0.3",
     "nuxt": "^3.13.0",
+    "pinia": "^2.2.4",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "tailwindcss-primeui": "^0.3.4",
